# Twitter_Analytics

./: .gitignore  CMakeLists.txt  README.md  TO-DO.txt  TrabFinal  TrabFinal.cbp  arvores.txt
Teste/: Teste.cbp  Teste.layout
Twitter_Analytics/: .TwitterAnalytics.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  TwitterAnalytics.c  Twitter_Analytics  Twitter_Analytics.vcxproj  Twitter_Analytics.vcxproj.filters  cmake_install.cmake  file1.csv  file1.txt  file2.csv  file2.txt  output.csv
Twitter_Analytics/Header/: .AVL.h.swp  .avl.h.swp  .generic.h.swp  AVL.h  AssociatedHashtag.h  BinaryTree.c  BinaryTree.h  Boolean.h  CharUtils.h  ClockUtils.h  CompareUtils.h  File.h  List.h  OPES.c  OPES.h  StringUtils.h  Tweet.h  TwitterAnalytics.h  avl.h  generic.h  ops.h
Twitter_Analytics/Source/: .AVL.c.swp  .Generic.c.swp  .avl.c.swp  .generic.c.swp  AVL.c  AVL.c~RF10426dd9.TMP  AssociatedHashtag.c  BinaryTree.c  CharUtils.c  ClockUtils.c  CompareUtils.c  File.c  File.c~RF39b234ab.TMP  File.c~RF39b8a0d5.TMP  Generic.c  List.c  OPES.c  StringUtils.c  Tweet.c  avl.c  generic.c
